Fix overlapping player names on pending game page

--- a/less/gamelist.less
+++ b/less/gamelist.less
@@ -294,3 +294,7 @@
     margin-top: 0;
   }
 }
+
+.player-row {
+  min-height: 35px;
+}
